fix minor bugs + add Rnew article in inst

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,6 +3,8 @@ prepareData/
 ^.*\.o$
 ^.*\.so$
 ^README.org$
+^vignettes/.*\.org$
+^vignettes/.*\.bbl$
 ^\.travis\.yml$
 ^.*\.Rproj$
 ^\.Rproj\.user$
