--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,9 @@ S3method(coxSpecialStrata,coxph)
 S3method(coxSpecialStrata,cph)
 S3method(coxSpecialStrata,phreg)
 S3method(coxStrata,coxph)
+S3method(coxStrataLevel,coxph)
+S3method(coxStrataLevel,cph)
+S3method(coxStrataLevel,phreg)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
@@ -124,6 +127,7 @@ export(coxLP)
 export(coxN)
 export(coxSpecialStrata)
 export(coxStrata)
+export(coxStrataLevel)
 export(coxVarCov)
 export(coxVariableName)
 export(discreteRoot)
