now should pass CRAN test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,21 +25,23 @@ S3method(coxBaseEstimator,phreg)
 S3method(coxCenter,coxph)
 S3method(coxCenter,cph)
 S3method(coxCenter,phreg)
-S3method(coxDesign,coxph)
-S3method(coxDesign,phreg)
 S3method(coxFormula,coxph)
 S3method(coxFormula,cph)
 S3method(coxFormula,phreg)
 S3method(coxLP,coxph)
 S3method(coxLP,cph)
 S3method(coxLP,phreg)
+S3method(coxModelFrame,coxph)
+S3method(coxModelFrame,cph)
+S3method(coxModelFrame,phreg)
 S3method(coxN,coxph)
 S3method(coxN,cph)
 S3method(coxN,phreg)
-S3method(coxSpecialStrata,coxph)
-S3method(coxSpecialStrata,cph)
-S3method(coxSpecialStrata,phreg)
+S3method(coxSpecial,coxph)
+S3method(coxSpecial,cph)
+S3method(coxSpecial,phreg)
 S3method(coxStrata,coxph)
+S3method(coxStrata,cph)
 S3method(coxStrataLevel,coxph)
 S3method(coxStrataLevel,cph)
 S3method(coxStrataLevel,phreg)
@@ -54,7 +56,6 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -122,11 +123,11 @@ export(colScale_cpp)
 export(colSumsCrossprod)
 export(coxBaseEstimator)
 export(coxCenter)
-export(coxDesign)
 export(coxFormula)
 export(coxLP)
+export(coxModelFrame)
 export(coxN)
-export(coxSpecialStrata)
+export(coxSpecial)
 export(coxStrata)
 export(coxStrataLevel)
 export(coxVarCov)
@@ -137,6 +138,7 @@ export(iidCox)
 export(influenceTest)
 export(ipcw)
 export(penalizedS3)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
