remove extra argument in coxStrata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -138,7 +139,6 @@ export(iidCox)
 export(influenceTest)
 export(ipcw)
 export(penalizedS3)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
