--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ export(IPA)
 export(LRR)
 export(Score)
 export(ate)
+export(ateRobust)
 export(boot2pvalue)
 export(colCenter_cpp)
 export(colCumSum)
