adapted http adress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ S3method(predictRisk,penfitS3)
 S3method(predictRisk,prodlim)
 S3method(predictRisk,psm)
 S3method(predictRisk,randomForest)
+S3method(predictRisk,ranger)
 S3method(predictRisk,rfsrc)
 S3method(predictRisk,riskRegression)
 S3method(predictRisk,rpart)
