simplify calcLterm in ateRobust + fix bug in predictCoxPL

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ export(plotRisk)
 export(predictCox)
 export(predictCoxPL)
 export(predictRisk)
+export(predictSurv)
 export(riskRegression)
 export(rowCenter_cpp)
 export(rowCumSum)
