restaure tests in ateRobust

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(IPA,default)
 S3method(IPA,glm)
 S3method(Score,list)
 S3method(as.data.table,ate)
+S3method(as.data.table,ateRobust)
 S3method(as.data.table,influenceTest)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
@@ -17,6 +18,7 @@ S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
 S3method(confint,ate)
+S3method(confint,ateRobust)
 S3method(confint,influenceTest)
 S3method(confint,predictCSC)
 S3method(confint,predictCox)
