improved print functions for ate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -246,6 +246,7 @@ importFrom(rms,cph)
 importFrom(rms,strat)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
+importFrom(stats,confint)
 importFrom(stats,cov)
 importFrom(stats,delete.response)
 importFrom(stats,drop.terms)
