fixed bug in Brier score influence function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CSCTD)
 S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,FGR)
+S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
 S3method(predictRisk,coxphTD)
@@ -119,6 +120,7 @@ export(FGR)
 export(IPA)
 export(LRR)
 export(Score)
+export(SuperPredictor)
 export(ate)
 export(ateRobust)
 export(boot2pvalue)
