--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CSCTD)
 S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,FGR)
+S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
@@ -120,6 +121,7 @@ export(FGR)
 export(IPA)
 export(LRR)
 export(Score)
+export(SmcFcs)
 export(SuperPredictor)
 export(ate)
 export(ateRobust)
