--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ S3method(print,predictCox)
 S3method(print,riskRegression)
 S3method(print,scoreAUC)
 S3method(print,scoreBrier)
+S3method(print,scorerisks)
 S3method(print,subjectWeights)
 S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
