--- a/NAMESPACE
+++ b/NAMESPACE
@@ -189,11 +189,13 @@ importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,is.data.table)
 importFrom(data.table,melt)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
+importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,setorder)
 importFrom(foreach,"%dopar%")
