--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ export(rsquared)
 export(sampleData)
 export(sampleDataTD)
 export(selectCox)
+export(simActiveSurveillance)
 export(simMelanoma)
 export(sliceMultiplyPointer_cpp)
 export(sliceMultiply_cpp)
