now with colourful levelplots for risks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,8 @@ S3method(summary,FGR)
 S3method(summary,riskRegression)
 export(ARR)
 export(CSC)
+export(Cforest)
+export(Ctree)
 export(FGR)
 export(IPA)
 export(LRR)
@@ -159,6 +161,9 @@ export(predictCox)
 export(predictCoxPL)
 export(predictRisk)
 export(predictSurv)
+export(predictSurvProb.Cforest)
+export(predictSurvProb.Ctree)
+export(riskLevelPlot)
 export(riskRegression)
 export(rowCenter_cpp)
 export(rowCumSum)
