--- a/NAMESPACE
+++ b/NAMESPACE
@@ -233,6 +233,7 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,gray)
+importFrom(grDevices,rainbow)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,box)
