--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ S3method(predictRisk,ARR)
 S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CSCTD)
 S3method(predictRisk,CauseSpecificCox)
+S3method(predictRisk,Cforest)
+S3method(predictRisk,Ctree)
 S3method(predictRisk,FGR)
 S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
@@ -161,8 +163,6 @@ export(predictCox)
 export(predictCoxPL)
 export(predictRisk)
 export(predictSurv)
-export(predictSurvProb.Cforest)
-export(predictSurvProb.Ctree)
 export(riskLevelPlot)
 export(riskRegression)
 export(rowCenter_cpp)
