--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,7 +78,9 @@ S3method(predictRisk,cph)
 S3method(predictRisk,default)
 S3method(predictRisk,double)
 S3method(predictRisk,factor)
+S3method(predictRisk,flexsurvreg)
 S3method(predictRisk,formula)
+S3method(predictRisk,gbm)
 S3method(predictRisk,glm)
 S3method(predictRisk,integer)
 S3method(predictRisk,lrm)
