--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,8 +36,10 @@ S3method(coxLP,phreg)
 S3method(coxModelFrame,coxph)
 S3method(coxModelFrame,cph)
 S3method(coxModelFrame,phreg)
+S3method(coxN,CauseSpecificCox)
 S3method(coxN,coxph)
 S3method(coxN,cph)
+S3method(coxN,glm)
 S3method(coxN,phreg)
 S3method(coxSpecial,coxph)
 S3method(coxSpecial,cph)
