--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(coxCenter,cph)
 S3method(coxCenter,phreg)
 S3method(coxFormula,coxph)
 S3method(coxFormula,cph)
+S3method(coxFormula,glm)
 S3method(coxFormula,phreg)
 S3method(coxLP,coxph)
 S3method(coxLP,cph)
