Added predictRisk methods for formula versions of glmnet and cv.glmnet.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with
     Competing Risks
-Version: 2019.03.03
+Version: 2019.03.04
 Authors@R: c(person("Thomas Alexander", "Gerds", role = c("aut", "cre"),
                     email = "tag@biostat.ku.dk"),
              person("Paul", "Blanche", role = "ctb"),
              person("Ulla Brasch", "Mogensen", role = "ctb"),
-             person("Brice", "Ozenne", role = "aut", email = "broz@sund.ku.dk", comment = c(ORCID = "0000-0001-9694-2956")))
+             person("Brice", "Ozenne", role = "aut", email = "broz@sund.ku.dk", comment = c(ORCID = "0000-0001-9694-2956"))
+             person("Nikolaj", "Tollenaar", role = "ctb"))
 Depends:
     R (>= 3.5.0),
 Imports:
@@ -32,9 +33,13 @@ LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     boot,
     CoxBoost,
-	ipw,
+    ipw,
     SuperLearner,
+    gbm,
+    glmnetUtils,
+    flexsurvreg, 
     mets,
+    mfp,
     mstate,
     party,
     pec,
@@ -42,6 +47,7 @@ Suggests:
     pROC,
     randomForest,
     randomForestSRC,
+    ranger,
     rbenchmark,
     rpart,
     testthat
