--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ importFrom(data.table,dcast)
 importFrom(data.table,is.data.table)
 importFrom(data.table,melt)
 importFrom(data.table,rbindlist)
+importFrom(data.table,setDT)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
