--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     prodlim (>= 2018.4.18),
     doParallel,
     stats,
+    hdnom,
     graphics,
     survival (>= 2.44.1),
     lava (>= 1.6.5),
@@ -40,9 +41,8 @@ Suggests:
     SuperLearner,
     gbm,
     glmnetUtils,
-    flexsurvreg, 
+    flexsurv, 
     mets,
-    mfp,
     mstate,
     party,
     pec,
@@ -50,7 +50,6 @@ Suggests:
     pROC,
     randomForest,
     randomForestSRC,
-    ranger,
     rbenchmark,
     rpart,
     testthat,
