--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,7 +78,7 @@ S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
 S3method(predictRisk,coxphTD)
 S3method(predictRisk,cph)
-S3method(predictRisk,cv.glmnet.formula)
+S3method(predictRisk,cv.glmnet)
 S3method(predictRisk,default)
 S3method(predictRisk,double)
 S3method(predictRisk,factor)
@@ -86,7 +86,7 @@ S3method(predictRisk,flexsurvreg)
 S3method(predictRisk,formula)
 S3method(predictRisk,gbm)
 S3method(predictRisk,glm)
-S3method(predictRisk,glmnet.formula)
+S3method(predictRisk,glmnet)
 S3method(predictRisk,integer)
 S3method(predictRisk,lrm)
 S3method(predictRisk,matrix)
