... implementing the full influence function for ate ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ export(predictRiskIID)
 export(predictSurv)
 export(riskLevelPlot)
 export(riskRegression)
+export(riskRegression.options)
 export(rowCenter_cpp)
 export(rowCumSum)
 export(rowMultiply_cpp)
