--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,10 @@ S3method(coxStrataLevel,phreg)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
+S3method(iidCox,CauseSpecificCox)
+S3method(iidCox,coxph)
+S3method(iidCox,cph)
+S3method(iidCox,phreg)
 S3method(influenceTest,default)
 S3method(influenceTest,list)
 S3method(ipcw,cox)
@@ -127,6 +131,8 @@ S3method(subjectWeights,forest)
 S3method(subjectWeights,marginal)
 S3method(subjectWeights,none)
 S3method(subjectWeights,nonpar)
+S3method(subsetIndex,default)
+S3method(subsetIndex,matrix)
 S3method(summary,FGR)
 S3method(summary,riskRegression)
 export(ARR)
@@ -160,7 +166,6 @@ export(coxVarCov)
 export(coxVariableName)
 export(discreteRoot)
 export(getSplitMethod)
-export(iidCox)
 export(influenceTest)
 export(ipcw)
 export(penalizedS3)
@@ -193,6 +198,7 @@ export(sliceMultiply_cpp)
 export(sliceScalePointer_cpp)
 export(sliceScale_cpp)
 export(subjectWeights)
+export(subsetIndex)
 export(transformCI)
 export(transformCIBP)
 export(transformIID)
