... making average.iid uniform across predictCox and predict.CSC ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,12 +103,6 @@ S3method(predictRisk,riskRegression)
 S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
 S3method(predictRisk,survfit)
-S3method(predictRiskIID,CauseSpecificCox)
-S3method(predictRiskIID,coxph)
-S3method(predictRiskIID,cph)
-S3method(predictRiskIID,default)
-S3method(predictRiskIID,glm)
-S3method(predictRiskIID,phreg)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
@@ -149,6 +143,7 @@ export(ate)
 export(ateRobust)
 export(boot2pvalue)
 export(colCenter_cpp)
+export(colCumPrd)
 export(colCumSum)
 export(colMultiply_cpp)
 export(colScale_cpp)
@@ -178,11 +173,11 @@ export(plotRisk)
 export(predictCox)
 export(predictCoxPL)
 export(predictRisk)
-export(predictRiskIID)
 export(riskLevelPlot)
 export(riskRegression)
 export(riskRegression.options)
 export(rowCenter_cpp)
+export(rowCumProd)
 export(rowCumSum)
 export(rowMultiply_cpp)
 export(rowScale_cpp)
