Pass CRAN tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,8 @@ S3method(predictRisk,Ctree)
 S3method(predictRisk,FGR)
 S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
+S3method(predictRisk,aalen)
+S3method(predictRisk,cox.aalen)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
 S3method(predictRisk,coxphTD)
@@ -140,10 +142,9 @@ export(Score)
 export(SmcFcs)
 export(SuperPredictor)
 export(ate)
-export(ateRobust)
 export(boot2pvalue)
 export(colCenter_cpp)
-export(colCumPrd)
+export(colCumProd)
 export(colCumSum)
 export(colMultiply_cpp)
 export(colScale_cpp)
@@ -161,6 +162,7 @@ export(coxVarCov)
 export(coxVariableName)
 export(discreteRoot)
 export(getSplitMethod)
+export(iidCox)
 export(influenceTest)
 export(ipcw)
 export(penalizedS3)
