comment boxplots for now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,6 +167,7 @@ export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
 export(plotEffects)
+export(plotPredictRisk)
 export(plotROC)
 export(plotRisk)
 export(predictCox)
