--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ S3method(predictRisk,selectCox)
 S3method(predictRisk,survfit)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
+S3method(print,IPA)
 S3method(print,Score)
 S3method(print,ate)
 S3method(print,influenceTest)
