--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ S3method(subjectWeights,nonpar)
 S3method(subsetIndex,default)
 S3method(subsetIndex,matrix)
 S3method(summary,FGR)
+S3method(summary,Score)
 S3method(summary,ate)
 S3method(summary,riskRegression)
 export(ARR)
