--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Imports:
     parallel,
     Rcpp,
     lattice,
+    Publish,
     rms (>= 5.1.3)
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
@@ -68,5 +69,5 @@ Description: Implementation of the following methods for event history analysis.
     the risk prediction models on one part of each split and then summarizes and
     compares the performance across splits.
 License: GPL (>= 2)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 VignetteBuilder: R.rsp
