fixed bug in scoping kindly pointed out by Robin Denz

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,6 +266,7 @@ importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(lava,"transform<-")
+importFrom(mets,phreg)
 importFrom(prodlim,Hist)
 importFrom(prodlim,dimColor)
 importFrom(prodlim,jackknife)
