--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ S3method(predictRisk,rfsrc)
 S3method(predictRisk,riskRegression)
 S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
+S3method(predictRisk,singleEventCB)
 S3method(predictRisk,survfit)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
