test+suggests added
a test for singleEventCB was added. I'll work on competing events later. in suggests, casebase was added as well. As changes occur to the structure of the casebase output (namely the classname), i'll update this riskRegression version. All local checks passed without error

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Suggests:
     rbenchmark,
     rpart,
     testthat,
-    R.rsp
+    R.rsp,
+    casebase
 Maintainer: Thomas Alexander Gerds <tag@biostat.ku.dk>
 Description: Implementation of the following methods for event history analysis.
     Risk regression models for survival endpoints also in the presence of competing
