--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(IPA,coxph)
 S3method(IPA,default)
 S3method(IPA,glm)
 S3method(Score,list)
+S3method(anova,ate)
 S3method(as.data.table,ate)
 S3method(as.data.table,influenceTest)
 S3method(as.data.table,predictCSC)
@@ -200,8 +201,8 @@ export(subsetIndex)
 export(transformCI)
 export(transformCIBP)
 export(transformIID)
-export(transformP)
 export(transformSE)
+export(transformT)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(cmprsk,predict.crr)
