... still making progress ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
 S3method(predictRisk,singleEventCB)
 S3method(predictRisk,survfit)
+S3method(predictRisk,wglm)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,IPA)
@@ -163,8 +164,10 @@ export(coxVarCov)
 export(coxVariableName)
 export(discreteRoot)
 export(getSplitMethod)
+export(iid.wglm)
 export(iidCox)
 export(influenceTest)
+export(information.wglm)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
@@ -189,6 +192,7 @@ export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
 export(sampleDataTD)
+export(score.wglm)
 export(selectCox)
 export(simActiveSurveillance)
 export(simMelanoma)
@@ -203,6 +207,7 @@ export(transformCIBP)
 export(transformIID)
 export(transformSE)
 export(transformT)
+export(wglm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(cmprsk,predict.crr)
