--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,12 +52,14 @@ S3method(coxStrataLevel,phreg)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
+S3method(iid,wglm)
 S3method(iidCox,CauseSpecificCox)
 S3method(iidCox,coxph)
 S3method(iidCox,cph)
 S3method(iidCox,phreg)
 S3method(influenceTest,default)
 S3method(influenceTest,list)
+S3method(information,wglm)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -123,6 +125,7 @@ S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
 S3method(rsquared,default)
 S3method(rsquared,glm)
+S3method(score,wglm)
 S3method(subjectWeights,cox)
 S3method(subjectWeights,forest)
 S3method(subjectWeights,marginal)
@@ -164,10 +167,8 @@ export(coxVarCov)
 export(coxVariableName)
 export(discreteRoot)
 export(getSplitMethod)
-export(iid.wglm)
 export(iidCox)
 export(influenceTest)
-export(information.wglm)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
@@ -192,7 +193,6 @@ export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
 export(sampleDataTD)
-export(score.wglm)
 export(selectCox)
 export(simActiveSurveillance)
 export(simMelanoma)
@@ -274,6 +274,9 @@ importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(lava,"transform<-")
+importFrom(lava,iid)
+importFrom(lava,information)
+importFrom(lava,score)
 importFrom(mets,phreg)
 importFrom(prodlim,Hist)
 importFrom(prodlim,dimColor)
