... improve memory handling iidCox ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(as.data.table,ate)
 S3method(as.data.table,influenceTest)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
+S3method(as.data.table,transformCIBP)
 S3method(autoplot,Score)
 S3method(autoplot,ate)
 S3method(autoplot,predictCSC)
