--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -135,7 +135,7 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./*.zip
           asset_content_type: application/zip
-          asset_name: ${{ REPOSITORY_NAME }}-${{ runner.os }}-r${{ matrix.config.r }}.zip
+          asset_name: ${REPOSITORY_NAME}-${{ runner.os }}-r${{ matrix.config.r }}.zip
 
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -146,4 +146,4 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./*.t*gz
-          asset_name: ${{ REPOSITORY_NAME }}-${{ runner.os }}-r${{ matrix.config.r }}.tgz
+          asset_name: ${REPOSITORY_NAME}-${{ runner.os }}-r${{ matrix.config.r }}.tgz
