--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -128,7 +128,7 @@ jobs:
       - name: Upload Release Asset
         id: upload-release-asset-windows
         uses: actions/upload-release-asset@v1
-        if: startsWith(github.ref, 'refs/tags/') & runner.os == 'Windows'      
+        if: startsWith(github.ref, 'refs/tags/') && runner.os == 'Windows'      
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -142,7 +142,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-        if: startsWith(github.ref, 'refs/tags/') & runner.os != 'Windows'
+        if: startsWith(github.ref, 'refs/tags/') && runner.os != 'Windows'
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./*.t*gz
