--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ environment:
     R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
     _R_CHECK_FORCE_SUGGESTS_: 0
     WARNINGS_ARE_ERRORS: 1
+    CRAN: http://cran.rstudio.com
 
 cache:
   - C:\RLibrary
