--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,6 @@ environment:
     R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
     _R_CHECK_FORCE_SUGGESTS_: 0
     WARNINGS_ARE_ERRORS: 1
-    CRAN: http://cran.rstudio.com
 
 cache:
   - C:\RLibrary
@@ -23,7 +22,7 @@ cache:
 # Adapt as necessary starting from here
 
 build_script:
-  - Rscript -e "if (!requireNamespace('remotes')) {install.packages('remotes')}; remotes::install_github('cran/CoxBoost', upgrade = FALSE, force = FALSE)"
+  - Rscript -e "if (!requireNamespace('remotes')) {install.packages('remotes', repos = 'http://cran.rstudio.com')}; remotes::install_github('cran/CoxBoost', upgrade = FALSE, force = FALSE)"
   - travis-tool.sh install_deps
 
 test_script:
