suggested package ensurance

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,14 @@ Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with
     Competing Risks
-Version: 2020.10.29
+Version: 2020.12.05
 Authors@R: c(person("Thomas Alexander", "Gerds", role = c("aut", "cre"),
                     email = "tag@biostat.ku.dk"),
              person("Paul", "Blanche", role = "ctb"),
              person("Rikke", "Mortensen", role = "ctb"),
              person("Marvin", "Wright", role = "ctb"),
              person("Nikolaj", "Tollenaar", role = "ctb"),
+             person("John", "Muschelli", role = "ctb"),
              person("Ulla Brasch", "Mogensen", role = "ctb"),
              person("Brice", "Ozenne", role = "aut", email = "broz@sund.ku.dk", comment = c(ORCID = "0000-0001-9694-2956")))
 Depends:
@@ -41,7 +42,6 @@ Suggests:
     casebase,
     ipw,
     gbm,
-    glmnetUtils,
     flexsurv, 
     mgcv,
     mstate,
@@ -52,12 +52,10 @@ Suggests:
     pROC,
     randomForest,
     randomForestSRC,
-    rbenchmark,
     rpart,
-	scam,
-    smcfcs,
+    scam,
     SuperLearner,
-	testthat,
+    testthat,
     R.rsp
 Maintainer: Thomas Alexander Gerds <tag@biostat.ku.dk>
 Description: Implementation of the following methods for event history analysis.
