fixed drop array bug in predictRisk.rfsrc (thanks Kristina)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ S3method(predictRisk,flexsurvreg)
 S3method(predictRisk,formula)
 S3method(predictRisk,gbm)
 S3method(predictRisk,glm)
+S3method(predictRisk,hal9001)
 S3method(predictRisk,integer)
 S3method(predictRisk,lrm)
 S3method(predictRisk,matrix)
@@ -143,6 +144,7 @@ export(CSC)
 export(Cforest)
 export(Ctree)
 export(FGR)
+export(IC_Nelson_Aalen_cens_time)
 export(IPA)
 export(LRR)
 export(Score)
