--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(autoplot,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
+S3method(coef,wglm)
 S3method(confint,ate)
 S3method(confint,influenceTest)
 S3method(confint,predictCSC)
@@ -53,6 +54,7 @@ S3method(coxStrataLevel,phreg)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
+S3method(formula,wglm)
 S3method(iid,wglm)
 S3method(iidCox,CauseSpecificCox)
 S3method(iidCox,coxph)
@@ -67,6 +69,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(nobs,wglm)
 S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -123,6 +126,7 @@ S3method(print,scoreAUC)
 S3method(print,scoreBrier)
 S3method(print,scorerisks)
 S3method(print,subjectWeights)
+S3method(print,wglm)
 S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
 S3method(rsquared,default)
@@ -139,6 +143,7 @@ S3method(summary,FGR)
 S3method(summary,Score)
 S3method(summary,ate)
 S3method(summary,riskRegression)
+S3method(summary,wglm)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -150,6 +155,7 @@ export(LRR)
 export(Score)
 export(SuperPredictor)
 export(ate)
+export(baseHaz_cpp)
 export(boot2pvalue)
 export(colCenter_cpp)
 export(colCumProd)
@@ -304,6 +310,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,model.response)
 importFrom(stats,na.fail)
 importFrom(stats,na.omit)
+importFrom(stats,nobs)
 importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
