working on pseudo-value bug

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(IPA,CauseSpecificCox)
 S3method(IPA,coxph)
 S3method(IPA,default)
 S3method(IPA,glm)
+S3method(IPA,rfsrc)
 S3method(Score,list)
 S3method(anova,ate)
 S3method(as.data.table,ate)
@@ -144,6 +145,7 @@ export(IC_Nelson_Aalen_cens_time)
 export(IPA)
 export(LRR)
 export(Score)
+export(Score.list)
 export(SuperPredictor)
 export(ate)
 export(baseHaz_cpp)
