fixed bug in summary.Score now exporting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -203,6 +203,7 @@ export(sliceScalePointer_cpp)
 export(sliceScale_cpp)
 export(subjectWeights)
 export(subsetIndex)
+export(summary.Score)
 export(transformCI)
 export(transformCIBP)
 export(transformIID)
