--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ S3method(summary,FGR)
 S3method(summary,Score)
 S3method(summary,ate)
 S3method(summary,riskRegression)
+S3method(synthesize,formula)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -204,6 +205,8 @@ export(sliceScale_cpp)
 export(subjectWeights)
 export(subsetIndex)
 export(summary.Score)
+export(synthesize)
+export(synthesize.formula)
 export(transformCI)
 export(transformCIBP)
 export(transformIID)
