--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(autoplot,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
+S3method(coef,wglm)
 S3method(confint,ate)
 S3method(confint,influenceTest)
 S3method(confint,predictCSC)
@@ -53,6 +54,7 @@ S3method(coxStrataLevel,phreg)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
+S3method(formula,wglm)
 S3method(iidCox,CauseSpecificCox)
 S3method(iidCox,coxph)
 S3method(iidCox,cph)
@@ -65,6 +67,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(nobs,wglm)
 S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -107,6 +110,7 @@ S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
 S3method(predictRisk,singleEventCB)
 S3method(predictRisk,survfit)
+S3method(predictRisk,wglm)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,IPA)
@@ -120,6 +124,7 @@ S3method(print,scoreAUC)
 S3method(print,scoreBrier)
 S3method(print,scorerisks)
 S3method(print,subjectWeights)
+S3method(print,wglm)
 S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
 S3method(rsquared,default)
@@ -135,6 +140,7 @@ S3method(summary,FGR)
 S3method(summary,Score)
 S3method(summary,ate)
 S3method(summary,riskRegression)
+S3method(summary,wglm)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -209,6 +215,7 @@ export(transformCIBP)
 export(transformIID)
 export(transformSE)
 export(transformT)
+export(wglm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(cmprsk,predict.crr)
