--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ S3method(summary,Score)
 S3method(summary,ate)
 S3method(summary,riskRegression)
 S3method(synthesize,formula)
+S3method(synthesize,lvm)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -207,6 +208,7 @@ export(subsetIndex)
 export(summary.Score)
 export(synthesize)
 export(synthesize.formula)
+export(synthesize.lvm)
 export(transformCI)
 export(transformCIBP)
 export(transformIID)
