results of document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -279,7 +279,10 @@ importFrom(graphics,polygon)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(lava,"regression<-")
 importFrom(lava,"transform<-")
+importFrom(lava,endogenous)
+importFrom(lava,exogenous)
 importFrom(lava,iid)
 importFrom(lava,information)
 importFrom(lava,score)
@@ -301,6 +304,7 @@ importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,get_all_vars)
 importFrom(stats,glm)
+importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
@@ -331,6 +335,7 @@ importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,strata)
+importFrom(survival,survreg)
 importFrom(timereg,Event)
 importFrom(timereg,comp.risk)
 importFrom(utils,capture.output)
