fix s.e. calculation in wglm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,12 +54,14 @@ S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
 S3method(formula,wglm)
+S3method(iid,wglm)
 S3method(iidCox,CauseSpecificCox)
 S3method(iidCox,coxph)
 S3method(iidCox,cph)
 S3method(iidCox,phreg)
 S3method(influenceTest,default)
 S3method(influenceTest,list)
+S3method(information,wglm)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -128,6 +130,7 @@ S3method(rsquared,CauseSpecificCox)
 S3method(rsquared,coxph)
 S3method(rsquared,default)
 S3method(rsquared,glm)
+S3method(score,wglm)
 S3method(subjectWeights,cox)
 S3method(subjectWeights,forest)
 S3method(subjectWeights,marginal)
