--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(IPA,CauseSpecificCox)
 S3method(IPA,coxph)
 S3method(IPA,default)
 S3method(IPA,glm)
+S3method(Score,list)
 S3method(anova,ate)
 S3method(as.data.table,ate)
 S3method(as.data.table,influenceTest)
@@ -152,7 +153,6 @@ export(IPA)
 export(LRR)
 export(Score)
 export(Score.list)
-export(Score1)
 export(SuperPredictor)
 export(ate)
 export(baseHaz_cpp)
