--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(confint,ate)
 S3method(confint,influenceTest)
 S3method(confint,predictCSC)
 S3method(confint,predictCox)
+S3method(confint,wglm)
 S3method(coxBaseEstimator,coxph)
 S3method(coxBaseEstimator,phreg)
 S3method(coxCenter,coxph)
