--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,Cforest)
 S3method(predictRisk,Ctree)
 S3method(predictRisk,FGR)
+S3method(predictRisk,Hal9001)
 S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,aalen)
