--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,8 @@ S3method(summary,Score)
 S3method(summary,ate)
 S3method(summary,riskRegression)
 S3method(summary,wglm)
+S3method(synthesize,formula)
+S3method(synthesize,lvm)
 export(ARR)
 export(CSC)
 export(Cforest)
@@ -203,6 +205,7 @@ export(rsquared)
 export(sampleData)
 export(sampleDataTD)
 export(selectCox)
+export(sim.synth)
 export(simActiveSurveillance)
 export(simMelanoma)
 export(sliceMultiplyPointer_cpp)
@@ -212,6 +215,10 @@ export(sliceScale_cpp)
 export(subjectWeights)
 export(subsetIndex)
 export(summary.Score)
+export(synthesize)
+export(synthesize.formula)
+export(synthesize.lvm)
+export(synthesizeLTMLE)
 export(transformCIBP)
 export(wglm)
 importFrom(Rcpp,evalCpp)
