--- a/NAMESPACE
+++ b/NAMESPACE
@@ -205,9 +205,9 @@ export(rsquared)
 export(sampleData)
 export(sampleDataTD)
 export(selectCox)
-export(sim.synth)
 export(simActiveSurveillance)
 export(simMelanoma)
+export(simsynth)
 export(sliceMultiplyPointer_cpp)
 export(sliceMultiply_cpp)
 export(sliceScalePointer_cpp)
@@ -218,7 +218,6 @@ export(summary.Score)
 export(synthesize)
 export(synthesize.formula)
 export(synthesize.lvm)
-export(synthesizeLTMLE)
 export(transformCIBP)
 export(wglm)
 importFrom(Rcpp,evalCpp)
@@ -241,6 +240,7 @@ importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,setorder)
+importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,"%+replace%")
@@ -293,6 +293,7 @@ importFrom(lava,exogenous)
 importFrom(lava,iid)
 importFrom(lava,information)
 importFrom(lava,score)
+importFrom(lava,sim)
 importFrom(mets,phreg)
 importFrom(prodlim,Hist)
 importFrom(prodlim,dimColor)
