--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,12 +8,14 @@ on:
   push:
     branches:
       - main
+      - simulation
       - master
     tags:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10      
   pull_request:
     branches:
       - main
+      - simulation
       - master
 
 name: R-CMD-check
@@ -29,11 +31,12 @@ jobs:
       matrix:
         config:
           - {os: macOS-latest,   r: 'release'}
+          - {os: macOS-latest,   r: 'devel'}
           - {os: windows-latest, r: 'release'}
-          - {os: windows-latest, r: '3.6'}
-          - {os: ubuntu-16.04,   r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", http-user-agent: "R/4.0.0 (ubuntu-16.04) R (4.0.0 x86_64-pc-linux-gnu x86_64 linux-gnu) on GitHub Actions" }
-          - {os: ubuntu-16.04,   r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: 'oldrel',  rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: windows-latest, r: 'devel'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel'}
+          - {os: ubuntu-20.04,   r: '3.6'} #check older versions as well!
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -75,11 +78,6 @@ jobs:
           do
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "16.04"))')
-
-      - name: Install CoxBoost 
-        run: |
-          remotes::install_github("cran/CoxBoost", upgrade = FALSE, force = FALSE)
-        shell: Rscript {0}
 
       - name: Install dependencies
         run: |
