--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,13 +30,16 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          #R version 3.6 no longer works as it cannot install randomForest (requires at least a R version of 4.1)
           - {os: macOS-latest,   r: 'release'}
           - {os: macOS-latest,   r: 'devel'}
+          - {os: macOS-latest,   r: 'oldrel'}
           - {os: windows-latest, r: 'release'}
           - {os: windows-latest, r: 'devel'}
+          - {os: windows-latest, r: 'oldrel'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'devel'}
-          - {os: ubuntu-20.04,   r: '3.6'} #check older versions as well!
+          - {os: ubuntu-latest,   r: 'oldrel'} 
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
