predict.aalen & co fixed by Robin Denz

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ S3method(predictRisk,Hal9001)
 S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
 S3method(predictRisk,aalen)
+S3method(predictRisk,comprisk)
 S3method(predictRisk,cox.aalen)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
