--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,Cforest)
 S3method(predictRisk,Ctree)
 S3method(predictRisk,FGR)
+S3method(predictRisk,GLMnet)
 S3method(predictRisk,Hal9001)
 S3method(predictRisk,SmcFcs)
 S3method(predictRisk,SuperPredictor)
@@ -151,6 +152,8 @@ export(CSC)
 export(Cforest)
 export(Ctree)
 export(FGR)
+export(GLMnet)
+export(Hal9001)
 export(IPA)
 export(LRR)
 export(Score)
