Added option for saving memory with cox censoring in Score

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,6 +154,7 @@ export(Ctree)
 export(FGR)
 export(GLMnet)
 export(Hal9001)
+export(IC_Nelson_Aalen_cens_time)
 export(IPA)
 export(LRR)
 export(Score)
