cleanup sweepy mess

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ export(sampleDataTD)
 export(selectCox)
 export(simActiveSurveillance)
 export(simMelanoma)
+export(simPBC)
 export(simsynth)
 export(sliceMultiplyPointer_cpp)
 export(sliceMultiply_cpp)
