--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,7 +162,10 @@ export(SuperPredictor)
 export(ate)
 export(baseHaz_cpp)
 export(boot2pvalue)
+export(colCenter_cpp)
 export(colCumSum)
+export(colMultiply_cpp)
+export(colScale_cpp)
 export(coxBaseEstimator)
 export(coxCenter)
 export(coxFormula)
@@ -193,7 +196,10 @@ export(predictRisk)
 export(riskLevelPlot)
 export(riskRegression)
 export(riskRegression.options)
+export(rowCenter_cpp)
 export(rowCumSum)
+export(rowMultiply_cpp)
+export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
@@ -203,6 +209,10 @@ export(simActiveSurveillance)
 export(simMelanoma)
 export(simPBC)
 export(simsynth)
+export(sliceMultiplyPointer_cpp)
+export(sliceMultiply_cpp)
+export(sliceScalePointer_cpp)
+export(sliceScale_cpp)
 export(subjectWeights)
 export(subsetIndex)
 export(summary.Score)
